PS2/cool.output
Terminals unused in grammar

    ERROR


State 130 conflicts: 9 shift/reduce
State 141 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'
    6      | error ';'

    7 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID '{' expression '}' ';'
    8        | OBJECTID ':' TYPEID ';'
    9        | OBJECTID ':' TYPEID ASSIGN expression ';'
   10        | error ';'

   11 feature_list: feature
   12             | feature_list feature

   13 optional_feature_list: %empty
   14                      | feature_list

   15 formal: OBJECTID ':' TYPEID

   16 formal_list: formal
   17            | formal_list ',' formal

   18 optional_formal_list: %empty
   19                     | formal_list

   20 expression: OBJECTID ASSIGN expression
   21           | expression '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   22           | expression '.' OBJECTID '(' optional_expression_list_comma ')'
   23           | OBJECTID '(' optional_expression_list_comma ')'
   24           | IF expression THEN expression ELSE expression FI
   25           | WHILE expression LOOP expression POOL
   26           | '{' expression_list_block '}'
   27           | LET lets
   28           | CASE expression OF case_list ESAC
   29           | NEW TYPEID
   30           | ISVOID expression
   31           | expression '+' expression
   32           | expression '-' expression
   33           | expression '*' expression
   34           | expression '/' expression
   35           | '~' expression
   36           | expression '<' expression
   37           | expression LE expression
   38           | expression '=' expression
   39           | NOT expression
   40           | '(' expression ')'
   41           | OBJECTID
   42           | INT_CONST
   43           | STR_CONST
   44           | BOOL_CONST
   45           | error ';'

   46 optional_expression_list_comma: %empty
   47                               | expression
   48                               | optional_expression_list_comma ',' expression

   49 expression_list_block: expression ';'
   50                      | expression_list_block expression ';'

   51 case_list: branch
   52          | case_list branch

   53 branch: OBJECTID ':' TYPEID DARROW expression ';'

   54 lets: OBJECTID ':' TYPEID ASSIGN expression ',' lets
   55     | OBJECTID ':' TYPEID ',' lets
   56     | OBJECTID ':' TYPEID ASSIGN expression IN expression
   57     | OBJECTID ':' TYPEID IN expression


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 7 21 22 23 40
    ')' (41) 7 21 22 23 40
    '*' (42) 33
    '+' (43) 31
    ',' (44) 17 48 54 55
    '-' (45) 32
    '.' (46) 21 22
    '/' (47) 34
    ':' (58) 7 8 9 15 53 54 55 56 57
    ';' (59) 4 5 6 7 8 9 10 45 49 50 53
    '<' (60) 36
    '=' (61) 38
    '@' (64) 21
    '{' (123) 4 5 7 26
    '}' (125) 4 5 7 26
    '~' (126) 35
    error (256) 6 10 45
    CLASS (258) 4 5
    ELSE (259) 24
    FI (260) 24
    IF (261) 24
    IN (262) 56 57
    INHERITS (263) 5
    LET (264) 27
    LOOP (265) 25
    POOL (266) 25
    THEN (267) 24
    WHILE (268) 25
    CASE (269) 28
    ESAC (270) 28
    OF (271) 28
    DARROW (272) 53
    NEW (273) 29
    ISVOID (274) 30
    STR_CONST <symbol> (275) 43
    INT_CONST <symbol> (276) 42
    BOOL_CONST <boolean> (277) 44
    TYPEID <symbol> (278) 4 5 7 8 9 15 21 29 53 54 55 56 57
    OBJECTID <symbol> (279) 7 8 9 15 20 21 22 23 41 53 54 55 56 57
    ASSIGN (280) 9 20 54 56
    NOT (281) 39
    LE (282) 37
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature <feature> (49)
        on left: 7 8 9 10
        on right: 11 12
    feature_list <features> (50)
        on left: 11 12
        on right: 12 14
    optional_feature_list <features> (51)
        on left: 13 14
        on right: 4 5
    formal <formal> (52)
        on left: 15
        on right: 16 17
    formal_list <formals> (53)
        on left: 16 17
        on right: 17 19
    optional_formal_list <formals> (54)
        on left: 18 19
        on right: 7
    expression <expression> (55)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 7 9 20 21 22 24 25 28 30 31 32 33 34 35 36 37 38 39 40 47 48 49 50 53 54 56 57
    optional_expression_list_comma <expressions> (56)
        on left: 46 47 48
        on right: 21 22 23 48
    expression_list_block <expressions> (57)
        on left: 49 50
        on right: 26 50
    case_list <cases> (58)
        on left: 51 52
        on right: 28 52
    branch <case_> (59)
        on left: 53
        on right: 51 52
    lets <expression> (60)
        on left: 54 55 56 57
        on right: 27 54 55


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 13 (optional_feature_list)

    feature                go to state 15
    feature_list           go to state 16
    optional_feature_list  go to state 17


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 18


State 13

   10 feature: error . ';'

    ';'  shift, and go to state 19


State 14

    7 feature: OBJECTID . '(' optional_formal_list ')' ':' TYPEID '{' expression '}' ';'
    8        | OBJECTID . ':' TYPEID ';'
    9        | OBJECTID . ':' TYPEID ASSIGN expression ';'

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


State 15

   11 feature_list: feature .

    $default  reduce using rule 11 (feature_list)


State 16

   12 feature_list: feature_list . feature
   14 optional_feature_list: feature_list .

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 14 (optional_feature_list)

    feature  go to state 22


State 17

    4 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 23


State 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 13 (optional_feature_list)

    feature                go to state 15
    feature_list           go to state 16
    optional_feature_list  go to state 24


State 19

   10 feature: error ';' .

    $default  reduce using rule 10 (feature)


State 20

    7 feature: OBJECTID '(' . optional_formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 18 (optional_formal_list)

    formal                go to state 26
    formal_list           go to state 27
    optional_formal_list  go to state 28


State 21

    8 feature: OBJECTID ':' . TYPEID ';'
    9        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 29


State 22

   12 feature_list: feature_list feature .

    $default  reduce using rule 12 (feature_list)


State 23

    4 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 30


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 31


State 25

   15 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 26

   16 formal_list: formal .

    $default  reduce using rule 16 (formal_list)


State 27

   17 formal_list: formal_list . ',' formal
   19 optional_formal_list: formal_list .

    ','  shift, and go to state 33

    $default  reduce using rule 19 (optional_formal_list)


State 28

    7 feature: OBJECTID '(' optional_formal_list . ')' ':' TYPEID '{' expression '}' ';'

    ')'  shift, and go to state 34


State 29

    8 feature: OBJECTID ':' TYPEID . ';'
    9        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


State 30

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 31

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 37


State 32

   15 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 33

   17 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 39


State 34

    7 feature: OBJECTID '(' optional_formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 40


State 35

    9 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 56


State 36

    8 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 8 (feature)


State 37

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 38

   15 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 15 (formal)


State 39

   17 formal_list: formal_list ',' formal .

    $default  reduce using rule 17 (formal_list)


State 40

    7 feature: OBJECTID '(' optional_formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 57


State 41

   45 expression: error . ';'

    ';'  shift, and go to state 58


State 42

   24 expression: IF . expression THEN expression ELSE expression FI

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 59


State 43

   27 expression: LET . lets

    OBJECTID  shift, and go to state 60

    lets  go to state 61


State 44

   25 expression: WHILE . expression LOOP expression POOL

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 62


State 45

   28 expression: CASE . expression OF case_list ESAC

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 63


State 46

   29 expression: NEW . TYPEID

    TYPEID  shift, and go to state 64


State 47

   30 expression: ISVOID . expression

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 65


State 48

   43 expression: STR_CONST .

    $default  reduce using rule 43 (expression)


State 49

   42 expression: INT_CONST .

    $default  reduce using rule 42 (expression)


State 50

   44 expression: BOOL_CONST .

    $default  reduce using rule 44 (expression)


State 51

   20 expression: OBJECTID . ASSIGN expression
   23           | OBJECTID . '(' optional_expression_list_comma ')'
   41           | OBJECTID .

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    $default  reduce using rule 41 (expression)


State 52

   39 expression: NOT . expression

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 68


State 53

   35 expression: '~' . expression

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 69


State 54

   26 expression: '{' . expression_list_block '}'

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression             go to state 70
    expression_list_block  go to state 71


State 55

   40 expression: '(' . expression ')'

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 72


State 56

    9 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   21 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   22           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ';'  shift, and go to state 82


State 57

    7 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 83


State 58

   45 expression: error ';' .

    $default  reduce using rule 45 (expression)


State 59

   21 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   22           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   24           | IF expression . THEN expression ELSE expression FI
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    THEN  shift, and go to state 84
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 60

   54 lets: OBJECTID . ':' TYPEID ASSIGN expression ',' lets
   55     | OBJECTID . ':' TYPEID ',' lets
   56     | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   57     | OBJECTID . ':' TYPEID IN expression

    ':'  shift, and go to state 85


State 61

   27 expression: LET lets .

    $default  reduce using rule 27 (expression)


State 62

   21 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   22           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   25           | WHILE expression . LOOP expression POOL
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    LOOP  shift, and go to state 86
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 63

   21 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   22           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   28           | CASE expression . OF case_list ESAC
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    OF   shift, and go to state 87
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


State 64

   29 expression: NEW TYPEID .

    $default  reduce using rule 29 (expression)


State 65

   21 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   22           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   30           | ISVOID expression .
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 30 (expression)


State 66

   20 expression: OBJECTID ASSIGN . expression

    error       shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 88


State 67

   23 expression: OBJECTID '(' . optional_expression_list_comma ')'
